base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-demo-iad
spec:
  replicas: 4
  selector:
    matchLabels:
      app.kubernetes.io/name: k8s-demo-iad
  template:
    spec:
      containers:
      - image: pciaco/rancher-demo:latest
        name: k8s-demo-iad
