base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-iad
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: k8s-demo-iad
  sessionAffinity: None
  type: ClusterIP
