base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: cluster-issuer-letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: $(URL_HOST)
    http:
      paths:
      - path: /
        backend:
          serviceName: k8s-demo-iad
          servicePort: 80
  tls:
  - hosts:
    - $(URL_HOST)
    secretName: k8s-demo-iad-tls-letsencrypt-prod
